Version CVS HEAD (?)

  * General changes:
    - Refactoring: moved the independent code from
      the Gigasampler format engine to base classes
    - command line option '--profile' is currently disabled, since the
      respective profiling code is currently broken

  * Gigasampler format engine:
    - implemented the "round robin keyboard" dimension
    - fixed round robin and random dimensions for cases when number of
      dimension zones is not a power of two
    - made round robin use a counter for each region instead of each
      key

  * SFZ format engine:
    - Initial implementation (not usable yet)

  * SoundFont format engine:
    - Initial implementation (not usable yet)

  * Host plugins:
    - AU bugfix: failed to destroy its audio/MIDI devices
    - Listen to all interfaces on Mac OS X (INADDR_ANY)
    - VST bugfix: If the host called resume() before and after
      changing sample rate or block size, the number of channels was
      incorrectly set to two. This caused silence in Cubase 5.

  * MIDI driver:
    - ALSA MIDI driver supports now "NAME" device parameter, for overriding
      the ALSA sequencer client name

  * LSCP server:
    - added support for sending MIDI CC messages via LSCP command
      "SEND CHANNEL MIDI_DATA CC <sampler-chan> <ctrl> <val>"

  * Bug fixes:
    - Fixed crash which may occur when MIDI key + transpose is out of range

Version 1.0.0 (31 July 2009)

  * packaging changes:
    - autoconf bugfix: the PKG_CONFIG variable wasn't initialized properly,
      causing e.g. the libgig test to fail when
      "./configure --disable-jack-driver" was used
      (patch by Alexis Ballier)
    - fixed compilation with gcc 4.3
    - fixes for building on OS X (thanks to Ebrahim Mayat for testing)
    - fixed configure so it detects x86_64 (#107)
    - fixes for building with newer MinGW versions
    - fix for building with bison 2.4 (#111)
    - fixed building with libgig installed in a non-standard directory